--- a/_includes/banner-text.html
+++ b/_includes/banner-text.html
@@ -1,3 +1,3 @@
 <section class="p-10 text-banner">
-    <p>{{page.banner-1.text_html}}</p>
+    <p class="leading-7">{{page.banner-1.text_html}}</p>
 </section>
