--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,5 +1,5 @@
 <form>
-    <div class="grid grid-cols-2 gap-8 mb-4">
+    <div class="grid sm:grid-cols-2 gap-8 mb-4">
         <div>
             <input type="text" id="first-name" name="first-name">
             <label for="first-name"> First Name:</label>
@@ -21,6 +21,6 @@
     </div>
 
     <div class="flex justify-end">
-        <button type="submit" class="link mt-4">Send</button>
+        <button type="submit" class="link mt-4  mb-12 sm:mb-0">Send</button>
     </div>
 </form>
