--- a/_includes/hero-banner-home.html
+++ b/_includes/hero-banner-home.html
@@ -1,4 +1,4 @@
-<section class="p-10p min-h-[90vh] text-center flex justify-center align-middle items-center" style="background-image: url('{{page.header.image_path}}');">
+<section class="p-5p md:p-10p min-h-[90vh] text-center flex justify-center align-middle items-center" style="background-image: url('{{page.header.image_path}}');">
     <div>
         <img src="{{page.header.logo}}" alt="Mana Mei" class="h-[10rem] mx-auto my-auto mb-8">
         <h1 class="heading-lg-sans text-feature mb-4">{{page.header.title}}</h1>
