--- a/style.css
+++ b/style.css
@@ -85,19 +85,19 @@
 
     /* Typography */
     .heading-lg-sans {
-        @apply uppercase text-5xl leading-[1.1em] font-extralight mb-[0.5em]
+        @apply uppercase leading-5 text-[1.6rem] sm:text-4xl md:text-5xl font-extralight mb-[0.5em]
     }
 
     .heading-md-sans {
-        @apply uppercase text-3xl leading-[1.1em] font-extralight mb-[0.5em]
+        @apply uppercase   text-2xl sm:text-3xl leading-[1.1em] font-extralight mb-[0.5em]
     }
 
     .text-lg-serif {
-        @apply text-4xl font-extralight leading-[1.8em] font-serif mb-[0.5em]
+        @apply text-2xl sm:text-2xl md:text-4xl font-extralight leading-[1.8em] font-serif mb-[0.5em]
     }
 
     .text-md-serif {
-        @apply text-3xl font-extralight leading-[1.8em] font-serif mb-[0.5em]
+        @apply text-2xl sm:text-3xl font-extralight leading-[1.8em] font-serif mb-[0.5em]
     }
 
     .text-sm-serif {
@@ -116,6 +116,7 @@
         padding: 0.25rem 1.5rem;
         font-size: 1rem;
         letter-spacing: 0.1em;
+        display: inline-block
     }
 
     .button:hover, .button-form:hover {
