--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer class="p-5p">
-    <div class="grid grid-cols-5 gap-4">
-        <div class="col-span-2">
+    <div class="grid sm:grid-cols-5 gap-4">
+        <div class="sm:col-span-2">
             <span class="text-sm-serif block text-feature">Mana Mei</span>
             <h2>Offerings</h2>
             <nav>
@@ -10,8 +10,8 @@
             </nav>
         </div>
 
-        <div class="col-span-3">
-            <h2 class="text-right">Contact</h2>
+        <div class="sm:col-span-3">
+            <h2 class="md:text-right mt-8 sm:mt-0">Contact</h2>
             {% include form-contact.html %}
         </div>
     </div>
