--- a/_includes/start-here.html
+++ b/_includes/start-here.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style p-10p" style="background-image: url('{{page.start-here.background_image}}');">
+<section class="bg-image-style p-5p md:p-10p" style="background-image: url('{{page.start-here.background_image}}');">
     <h2 class="text-md-serif text-feature mb-4">Start Here</h2>
     <h3 class="heading-md-sans mb-4">{{page.start-here.heading}}</h3>
     <div>
