--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style bg-overlay bg-[url('{{page.testimonials.background_image}}')] p-10p bg-overlay-light">
+<section class="bg-image-style bg-overlay bg-[url('{{page.testimonials.background_image}}')] p-5p md:p-10p bg-overlay-light">
     <div class="icon">
         <img src="/uploads/icons/manamei-17.png" class="h-12">
     </div>
