--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1168,6 +1168,9 @@ ul {
   .md\:mb-0 {
     margin-bottom: 0px;
   }
+  .md\:w-\[80\%\] {
+    width: 80%;
+  }
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
