--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -617,7 +617,8 @@ ul {
         letter-spacing: 0.1em;
         display: inline-block
     }
-.button:hover, .button-form:hover {
+.button:hover,
+    .button-form:hover {
         background-color: rgb(237, 213, 135, 0.5);
         border: 1px solid rgb(237, 213, 135, 0.5);
         color: white;
@@ -703,7 +704,7 @@ ul {
     }
 .gallery {
         overflow-x: auto;
-        flex-wrap: nowrap;
+        white-space: nowrap;
     }
 .bg-overlay {
         position: relative;
@@ -869,17 +870,20 @@ ul {
 .h-28 {
   height: 7rem;
 }
+.h-80 {
+  height: 20rem;
+}
 .h-\[10rem\] {
   height: 10rem;
 }
 .h-\[10vh\] {
   height: 10vh;
 }
+.h-\[65vh\] {
+  height: 65vh;
+}
 .min-h-\[100vh\] {
   min-height: 100vh;
-}
-.min-h-\[50vh\] {
-  min-height: 50vh;
 }
 .min-h-\[70vh\] {
   min-height: 70vh;
@@ -887,20 +891,20 @@ ul {
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
+.w-1\/5 {
+  width: 20%;
+}
 .w-\[10vh\] {
   width: 10vh;
-}
-.w-\[80\%\] {
-  width: 80%;
 }
 .w-full {
   width: 100%;
 }
-.w-28 {
-  width: 7rem;
+.w-1\/4 {
+  width: 25%;
 }
-.w-\[20\%\] {
-  width: 20%;
+.shrink-0 {
+  flex-shrink: 0;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -916,9 +920,6 @@ ul {
 }
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-.grid-cols-9 {
-  grid-template-columns: repeat(9, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -967,6 +968,10 @@ ul {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-red-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -984,44 +989,8 @@ ul {
 .bg-\[url\(\'\/uploads\/images\/manamei-20\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-20.jpg');
 }
-.bg-\[url\(\'\/uploads\/images\/manamei-26\.png\'\)\] {
-  background-image: url('/uploads/images/manamei-26.png');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-33\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-33.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-34\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-34.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-36\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-36.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-37\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-37.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-38\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-38.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-40\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-40.jpg');
-}
 .bg-\[url\(\'\/uploads\/images\/manamei-41\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-41.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-42\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-42.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-43\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-43.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-45\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-45.jpg');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-6\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-6.jpg');
-}
-.bg-\[url\(\'\{\{item\.image_path\}\}\'\)\] {
-  background-image: url('{{item.image_path}}');
 }
 .bg-\[url\(\'\{\{page\.details\.featured_image\}\}\'\)\] {
   background-image: url('{{page.details.featured_image}}');
@@ -1103,9 +1072,6 @@ ul {
 }
 .leading-7 {
   line-height: 1.75rem;
-}
-.leading-5 {
-  line-height: 1.25rem;
 }
 .text-dark {
   --tw-text-opacity: 1;
