--- a/_includes/optin.html
+++ b/_includes/optin.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style p-10p text-center 
+<section class="bg-image-style p-5p md:p-10p text-center 
 {% if page.cta.background.overlay == 'yes' %} 
 bg-overlay 
 {% endif %}"
