--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -784,6 +784,12 @@ ul {
 .col-span-5 {
   grid-column: span 5 / span 5;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
 .m-4 {
   margin: 1rem;
 }
@@ -903,6 +909,12 @@ ul {
 .w-1\/4 {
   width: 25%;
 }
+.w-1 {
+  width: 0.25rem;
+}
+.w-\[90\%\] {
+  width: 90%;
+}
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -920,6 +932,15 @@ ul {
 }
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1126,6 +1147,12 @@ ul {
   .sm\:mt-0 {
     margin-top: 0px;
   }
+  .sm\:h-20 {
+    height: 5rem;
+  }
+  .sm\:w-\[60\%\] {
+    width: 60%;
+  }
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1140,16 +1167,41 @@ ul {
   .md\:mb-0 {
     margin-bottom: 0px;
   }
+  .md\:h-24 {
+    height: 6rem;
+  }
   .md\:w-\[80\%\] {
     width: 80%;
   }
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+  .md\:w-\[40\%\] {
+    width: 40%;
+  }
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .md\:grid-cols-7 {
+    grid-template-columns: repeat(7, minmax(0, 1fr));
   }
   .md\:p-10p {
     padding: 10%;
   }
   .md\:text-right {
     text-align: right;
+  }
+}
+@media (min-width: 1024px) {
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+  .lg\:w-\[30\%\] {
+    width: 30%;
+  }
+}
+@media (min-width: 1280px) {
+  .xl\:w-\[20\%\] {
+    width: 20%;
   }
 }
