index mobile fixes

--- a/_includes/banner-icons.html
+++ b/_includes/banner-icons.html
@@ -1,4 +1,4 @@
-<section class="flex justify-around px-20p py-5p">
+<section class="flex justify-around px-10p md:px-20p py-5p">
     {% for item in page.banner-2 %}
     <div class="bg-image-style h-[10vh] w-[10vh]" style="background-image: url('{{item.image_path}}');"></div>
     {% endfor %}
