--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -530,15 +530,10 @@ ul {
 /* Typography */
 .heading-lg-sans {
   margin-bottom: 0.5em;
-  font-size: 1.6rem;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
   font-weight: 200;
   text-transform: uppercase;
-}
-@media (min-width: 640px) {
-  .heading-lg-sans {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
 }
 @media (min-width: 768px) {
   .heading-lg-sans {
@@ -563,16 +558,10 @@ ul {
 .text-lg-serif {
   margin-bottom: 0.5em;
   font-family: modernline, serif;
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
   font-weight: 200;
   line-height: 1.8em;
-}
-@media (min-width: 640px) {
-  .text-lg-serif {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
 }
 @media (min-width: 768px) {
   .text-lg-serif {
@@ -583,16 +572,10 @@ ul {
 .text-md-serif {
   margin-bottom: 0.5em;
   font-family: modernline, serif;
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
   font-weight: 200;
   line-height: 1.8em;
-}
-@media (min-width: 640px) {
-  .text-md-serif {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
 }
 .text-sm-serif {
   margin-bottom: 0.5em;
@@ -775,6 +758,9 @@ ul {
         height: 100%;
     }
 /* Slick Container */
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -783,12 +769,6 @@ ul {
 }
 .col-span-5 {
   grid-column: span 5 / span 5;
-}
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-.col-span-3 {
-  grid-column: span 3 / span 3;
 }
 .m-4 {
   margin: 1rem;
@@ -828,6 +808,9 @@ ul {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.ml-2 {
+  margin-left: 0.5rem;
+}
 .ml-4 {
   margin-left: 1rem;
 }
@@ -848,9 +831,6 @@ ul {
 }
 .mt-8 {
   margin-top: 2rem;
-}
-.ml-2 {
-  margin-left: 0.5rem;
 }
 .block {
   display: block;
@@ -882,9 +862,6 @@ ul {
 .h-28 {
   height: 7rem;
 }
-.h-80 {
-  height: 20rem;
-}
 .h-\[10rem\] {
   height: 10rem;
 }
@@ -903,23 +880,14 @@ ul {
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
-.w-1\/5 {
-  width: 20%;
-}
 .w-\[10vh\] {
   width: 10vh;
 }
-.w-full {
-  width: 100%;
-}
-.w-1\/4 {
-  width: 25%;
-}
-.w-1 {
-  width: 0.25rem;
-}
 .w-\[90\%\] {
   width: 90%;
+}
+.w-full {
+  width: 100%;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -936,17 +904,11 @@ ul {
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1044,6 +1006,10 @@ ul {
   padding-left: 10%;
   padding-right: 10%;
 }
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
 .px-20p {
   padding-left: 20%;
   padding-right: 20%;
@@ -1055,14 +1021,6 @@ ul {
 .py-5p {
   padding-top: 5%;
   padding-bottom: 5%;
-}
-.px-5p {
-  padding-left: 5%;
-  padding-right: 5%;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1148,6 +1106,30 @@ ul {
 
 
 /* ADDITIONAL COMPONENTS */
+@media (min-width: 768px) {
+    .md\:heading-lg-sans {
+    margin-bottom: 0.5em;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    font-weight: 200;
+    text-transform: uppercase;
+  }
+    @media (min-width: 768px) {
+    .md\:heading-lg-sans {
+      font-size: 3rem;
+      line-height: 1;
+    }
+  }
+
+    .md\:text-md-serif {
+    margin-bottom: 0.5em;
+    font-family: modernline, serif;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    font-weight: 200;
+    line-height: 1.8em;
+  }
+}
 @media (min-width: 640px) {
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
@@ -1190,14 +1172,11 @@ ul {
   .md\:h-24 {
     height: 6rem;
   }
-  .md\:w-\[80\%\] {
-    width: 80%;
-  }
-  .md\:w-1\/3 {
-    width: 33.333333%;
-  }
   .md\:w-\[40\%\] {
     width: 40%;
+  }
+  .md\:w-\[80\%\] {
+    width: 80%;
   }
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -1205,17 +1184,21 @@ ul {
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
+  .md\:border-none {
+    border-style: none;
+  }
   .md\:p-10p {
     padding: 10%;
+  }
+  .md\:px-20p {
+    padding-left: 20%;
+    padding-right: 20%;
   }
   .md\:text-right {
     text-align: right;
   }
 }
 @media (min-width: 1024px) {
-  .lg\:w-1\/4 {
-    width: 25%;
-  }
   .lg\:w-\[30\%\] {
     width: 30%;
   }
