--- a/_includes/banner-course.html
+++ b/_includes/banner-course.html
@@ -1,6 +1,7 @@
-<section class="flex justify-around p-5p">
+<section class="lg:flex justify-around p-5p">
     {% for item in page.banner %}
-    <div class="flex m-8">
+    <div class="flex p-5p lg:p-0
+    lg:{% cycle 'mx-0', 'mx-8' %}">
         <img src="{{item.image_path}}" class="h-28">
         <div>
             <span class="font-serif text-feature">{{item.title}}</span>
