--- a/_includes/hero-banner-course.html
+++ b/_includes/hero-banner-course.html
@@ -2,7 +2,7 @@
     <div>
         <h2 class="heading-lg-sans">{{page.heading.title}}</h2>
         <h3 class="text-lg-serif">{{page.heading.subtitle}}</h3>
-        <p class="lowercase">{{page.heading.description}}</p>
+        <p class="uppercase">{{page.heading.description}}</p>
         <a href="{{page.heading.button-enroll.url}}" class="button m-4">{{page.heading.button-enroll.text}}</a>
         {% if page.heading.button-video.show == true %}
         <a href="{{page.heading.button-video.url}}" class="button">{{page.heading.button-video.text}}</a>
