--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@
     }
 
     .text-lg-serif {
-        @apply text-3xl md:text-4xl font-extralight leading-[1.8em] font-serif mb-[0.5em]
+        @apply text-[1.375rem] md:text-4xl font-extralight leading-[1.8em] font-serif mb-[0.5em]
     }
 
     .text-md-serif {
