--- a/_includes/inside-the-course.html
+++ b/_includes/inside-the-course.html
@@ -1,4 +1,4 @@
-<section class="p-10p bg-image-style"
+<section class="py-10p px-5p md:p-10p bg-image-style"
     style="background-image: url('{{page.inside-the-course.background-image.background_image}}'); background-position: {{page.inside-the-course.background-image.image_focus}};">
     <div class="text-center">
         <h2 class="heading-lg-sans text-feature">{{page.inside-the-course.heading}}</h2>
