--- a/_includes/who-its-for.html
+++ b/_includes/who-its-for.html
@@ -1,6 +1,6 @@
-<section class="bg-image-style bg-overlay p-10p text-center" style="background-image: url('{{page.who-its-for.background-image.background_image}}'); background-position: {{page.who-its-for.background-image.image_focus}}">
+<section class="bg-image-style bg-overlay py-10p px-5p p-5p md:p-10p text-center" style="background-image: url('{{page.who-its-for.background-image.background_image}}'); background-position: {{page.who-its-for.background-image.image_focus}}">
     <h2 class="heading-lg-sans">{{page.heading.title}} is for</h2>
-    <div class="px-10p">
+    <div class="md:px-10p">
         <p>{{page.who-its-for.description_html}}</p>
     </div>
 </section>
