--- a/_includes/about-mana-course.html
+++ b/_includes/about-mana-course.html
@@ -1,6 +1,6 @@
-<section class="grid grid-cols-3 p-10p">
+<section class="grid md:grid-cols-3 p-10p">
     <div class="bg-image-style mr-20p" style="background-image: url('{{site.data.course-settings.instructor.featured_image}}')"></div>
-    <div class="col-span-2">
+    <div class="md:col-span-2">
         <h2 class="text-md-serif text-feature capitalize">{{site.data.course-settings.instructor.heading}}</h2>
         <p>{{site.data.course-settings.instructor.description_html}}</p>
     </div>
