--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -799,6 +799,10 @@ p {
   margin-top: auto;
   margin-bottom: auto;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -834,6 +838,9 @@ p {
 }
 .mt-8 {
   margin-top: 2rem;
+}
+.mb-10p {
+  margin-bottom: 10%;
 }
 .block {
   display: block;
@@ -882,6 +889,9 @@ p {
 }
 .min-h-\[90vh\] {
   min-height: 90vh;
+}
+.min-h-\[60vh\] {
+  min-height: 60vh;
 }
 .w-\[10vh\] {
   width: 10vh;
