free-masterclass form

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -318,6 +318,9 @@ video {
 [hidden] {
   display: none;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -791,6 +794,10 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 .my-5p {
   margin-top: 5%;
   margin-bottom: 5%;
@@ -799,9 +806,8 @@ p {
   margin-top: auto;
   margin-bottom: auto;
 }
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.mb-10p {
+  margin-bottom: 10%;
 }
 .mb-12 {
   margin-bottom: 3rem;
@@ -838,9 +844,6 @@ p {
 }
 .mt-8 {
   margin-top: 2rem;
-}
-.mb-10p {
-  margin-bottom: 10%;
 }
 .block {
   display: block;
@@ -884,14 +887,14 @@ p {
 .min-h-\[100vh\] {
   min-height: 100vh;
 }
+.min-h-\[60vh\] {
+  min-height: 60vh;
+}
 .min-h-\[70vh\] {
   min-height: 70vh;
 }
 .min-h-\[90vh\] {
   min-height: 90vh;
-}
-.min-h-\[60vh\] {
-  min-height: 60vh;
 }
 .w-\[10vh\] {
   width: 10vh;
@@ -917,14 +920,8 @@ p {
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1026,21 +1023,21 @@ p {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.px-\[5\%\] {
+.px-5p {
   padding-left: 5%;
   padding-right: 5%;
 }
-.py-5p {
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
-.px-5p {
+.px-\[5\%\] {
   padding-left: 5%;
   padding-right: 5%;
 }
 .py-10p {
   padding-top: 10%;
   padding-bottom: 10%;
+}
+.py-5p {
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1182,11 +1179,18 @@ p {
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
+  .md\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
   .md\:mb-0 {
     margin-bottom: 0px;
   }
   .md\:block {
     display: block;
+  }
+  .md\:grid {
+    display: grid;
   }
   .md\:hidden {
     display: none;
@@ -1205,6 +1209,9 @@ p {
   }
   .md\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
+  }
+  .md\:gap-2 {
+    gap: 0.5rem;
   }
   .md\:border-none {
     border-style: none;
