--- a/_includes/form-free-offering.html
+++ b/_includes/form-free-offering.html
@@ -1,21 +1,23 @@
-<!-- Ebook -->
+<!-- Free Offering -->
 <form>
-    <div class="grid grid-cols-7 gap-2">
-        <div class="col-span-2">
+    <div class="block md:grid md:grid-cols-7 md:gap-2">
+        <div class="my-2 md:my-0 md:col-span-2">
             <input type="text" id="first-name" name="first-name" placeholder=" First Name"
                 class="bg-transparent border border-white w-full">
         </div>
 
-        <div class="col-span-2">
+        <div class="my-2 md:my-0 md:col-span-2">
             <input type="text" id="last-name" name="last-name" placeholder=" Last Name"
                 class="bg-transparent border border-white w-full">
         </div>
 
-        <div class="col-span-2">
+        <div class="my-2 md:my-0 md:col-span-2">
             <input type="email" id="email" name="email" placeholder=" Email"
                 class="bg-transparent border border-white w-full">
         </div>
 
-        <button type="submit" class="button-form">Submit</button>
+        <div class="button-form">
+            <button type="submit">Submit</button>
+        </div>
     </div>
 </form>
