--- a/_layouts/free-offering.html
+++ b/_layouts/free-offering.html
@@ -25,7 +25,7 @@
                     {{page.details.day-of-the-week}}, {{page.details.date}}
                 </p>
             </div>
-            <a href="#" class="button mt-4 mb-10p md:mb-0 inline-block">{{page.details.button.text}}</a>
+            <a href="#cta-free" class="button mt-4 mb-10p md:mb-0 inline-block">{{page.details.button.text}}</a>
         </div>
         <div class="bg-image-style min-h-[60vh] bg-[url('{{page.details.featured_image}}')]"></div>
     </section>
@@ -34,7 +34,7 @@
     {% include about-mana-course.html %}
 
     <!-- CTA -->
-    <section class="bg-image-style bg-overlay p-10p text-center" style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
+    <section id="cta-free" class="bg-image-style bg-overlay p-10p text-center" style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
         <h2 class="heading-lg-sans">{{page.cta.heading}}</h2>
         
         {% include form-free-offering.html %}
