free-msaterclass mobile

--- a/_layouts/free-offering.html
+++ b/_layouts/free-offering.html
@@ -27,8 +27,10 @@
             </div>
             <a href="#cta-free" class="button mt-4 mb-10p md:mb-0 inline-block">{{page.details.button.text}}</a>
         </div>
-        <div class="bg-image-style min-h-[60vh] bg-[url('{{page.details.featured_image}}')]"></div>
+        <div class="bg-image-style min-h-[60vh] z-20 bg-[url('{{page.details.featured_image}}')]"></div>
     </section>
+
+    {% include social-share.html %}
 
     <!-- Your Instructor -->
     {% include about-mana-course.html %}
