--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -759,6 +759,18 @@ p {
         height: 100%;
     }
 /* Slick Container */
+.fixed {
+  position: fixed;
+}
+.left-0 {
+  left: 0px;
+}
+.top-\[50\%\] {
+  top: 50%;
+}
+.z-20 {
+  z-index: 20;
+}
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -884,6 +896,15 @@ p {
 .h-\[65vh\] {
   height: 65vh;
 }
+.h-4 {
+  height: 1rem;
+}
+.h-8 {
+  height: 2rem;
+}
+.h-\[1\.5rem\] {
+  height: 1.5rem;
+}
 .min-h-\[100vh\] {
   min-height: 100vh;
 }
@@ -962,6 +983,9 @@ p {
 .border-t {
   border-top-width: 1px;
 }
+.border-r {
+  border-right-width: 1px;
+}
 .border-feature {
   --tw-border-opacity: 1;
   border-color: rgb(237 213 135 / var(--tw-border-opacity));
@@ -984,6 +1008,13 @@ p {
 }
 .bg-transparent {
   background-color: transparent;
+}
+.bg-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-dark\/50 {
+  background-color: rgb(0 0 0 / 0.5);
 }
 .bg-\[url\(\'\/uploads\/images\/manamei-1\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-1.jpg');
@@ -1015,6 +1046,12 @@ p {
 .p-8 {
   padding: 2rem;
 }
+.p-2 {
+  padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
+}
 .px-10p {
   padding-left: 10%;
   padding-right: 10%;
@@ -1038,6 +1075,10 @@ p {
 .py-5p {
   padding-top: 5%;
   padding-bottom: 5%;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1091,6 +1132,10 @@ p {
   --tw-text-opacity: 1;
   color: rgb(237 213 135 / var(--tw-text-opacity));
 }
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .outline {
   outline-style: solid;
 }
@@ -1133,6 +1178,10 @@ p {
     font-weight: 200;
     line-height: 1.8em;
   }
+}
+.hover\:text-feature:hover {
+  --tw-text-opacity: 1;
+  color: rgb(237 213 135 / var(--tw-text-opacity));
 }
 @media (min-width: 640px) {
   .sm\:col-span-2 {
