--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,13 +1,13 @@
 <div class="social-share fixed top-[50%] left-0 bg-dark/50 border-t border-r border-b border-feature p-2">
 
     <nav class="text-white">
-        <a class="block py-4 px-2 hover:text-feature" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Twitter">
+        <a class="block py-4 px-2 hover:text-feature" href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
             <img src="/uploads/icons/manamei-23.png" class="h-[1.5rem]">
         </a>
-        <a class="block py-4 px-2 hover:text-feature" href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
+        <a class="block py-4 px-2 hover:text-feature" href="https://www.instagram.com/?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Instagram">
             <img src="/uploads/icons/manamei-24.png" class="h-[1.5rem]">
         </a>
-        <a class="block py-4 px-2 hover:text-feature" href="http://pinterest.com/pin/create/link/?url={{page.url}}&description={{page.title}}" rel="nofollow" target="_blank" title="Share on Pinterest">
+        <a class="block py-4 px-2 hover:text-feature" href="mailto:?subject=Check%20out%20this%20free%20masterclass&body=Hi%20there,%0A%0AI%20thought%20you%20might%20be%20interested%20in%20this%20free%20masterclass.%20You%20can%20find%20more%20details%20here:%20{{ site.url }}{{ page.url }}">
             <img src="/uploads/icons/manamei-25.png" class="h-[1.5rem]">
         </a>
     </nav>
