--- a/_layouts/free-offering.html
+++ b/_layouts/free-offering.html
@@ -36,13 +36,28 @@
     {% include about-mana-course.html %}
 
     <!-- CTA -->
-    <section id="cta-free" class="bg-image-style bg-overlay p-10p text-center" style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
+    <section id="cta-free" class="bg-image-style bg-overlay p-10p text-center"
+        style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
         <h2 class="heading-lg-sans">{{page.cta.heading}}</h2>
-        
+
         {% include form-free-offering.html %}
 
         <h3 class="text-feature mt-8">{{page.cta.share-text}}</h3>
-        <p>FB IG MAIL</p>
+        <div>
+            <a class="inline-block py-4 px-2 hover:text-feature"
+                href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank"
+                title="Share on Facebook">
+                <img src="/uploads/icons/manamei-23.png" class="h-[1.5rem] md:h-8">
+            </a>
+            <a class="inline-block py-4 px-2 hover:text-feature" href="https://www.instagram.com/?url={{ site.url }}{{ page.url }}"
+                rel="nofollow" target="_blank" title="Share on Instagram">
+                <img src="/uploads/icons/manamei-24.png" class="h-[1.5rem] md:h-8">
+            </a>
+            <a class="inline-block py-4 px-2 hover:text-feature"
+                href="mailto:?subject=Check%20out%20this%20free%20masterclass&body=Hi%20there,%0A%0AI%20thought%20you%20might%20be%20interested%20in%20this%20free%20masterclass.%20You%20can%20find%20more%20details%20here:%20{{ site.url }}{{ page.url }}">
+                <img src="/uploads/icons/manamei-25.png" class="h-[1.5rem] md:h-8">
+            </a>
+        </div>
     </section>
 
     <!-- Footer -->
