--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@
     }
 
     .button-cookies {
-        @apply mx-4 px-4 py-2 text-base uppercase
+        @apply mx-4 px-4 py-2 text-base uppercase flex items-center text-center
     }
 
     .button-menu {
