--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -646,10 +646,13 @@ p {
 .button-cookies {
   margin-left: 1rem;
   margin-right: 1rem;
+  display: flex;
+  align-items: center;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  text-align: center;
   font-size: 1rem;
   line-height: 1.5rem;
   text-transform: uppercase;
@@ -863,9 +866,6 @@ p {
 .inline-block {
   display: inline-block;
 }
-.inline {
-  display: inline;
-}
 .flex {
   display: flex;
 }
@@ -890,6 +890,9 @@ p {
 .h-28 {
   height: 7rem;
 }
+.h-\[1\.5rem\] {
+  height: 1.5rem;
+}
 .h-\[10rem\] {
   height: 10rem;
 }
@@ -898,15 +901,6 @@ p {
 }
 .h-\[65vh\] {
   height: 65vh;
-}
-.h-4 {
-  height: 1rem;
-}
-.h-8 {
-  height: 2rem;
-}
-.h-\[1\.5rem\] {
-  height: 1.5rem;
 }
 .min-h-\[100vh\] {
   min-height: 100vh;
@@ -983,11 +977,11 @@ p {
 .border-b {
   border-bottom-width: 1px;
 }
-.border-t {
-  border-top-width: 1px;
-}
 .border-r {
   border-right-width: 1px;
+}
+.border-t {
+  border-top-width: 1px;
 }
 .border-feature {
   --tw-border-opacity: 1;
@@ -1005,19 +999,15 @@ p {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.bg-dark\/50 {
+  background-color: rgb(0 0 0 / 0.5);
+}
 .bg-feature {
   --tw-bg-opacity: 1;
   background-color: rgb(237 213 135 / var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
-}
-.bg-dark {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-dark\/50 {
-  background-color: rgb(0 0 0 / 0.5);
 }
 .bg-\[url\(\'\/uploads\/images\/manamei-1\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-1.jpg');
@@ -1043,17 +1033,14 @@ p {
 .p-10p {
   padding: 10%;
 }
+.p-2 {
+  padding: 0.5rem;
+}
 .p-5p {
   padding: 5%;
 }
 .p-8 {
   padding: 2rem;
-}
-.p-2 {
-  padding: 0.5rem;
-}
-.p-4 {
-  padding: 1rem;
 }
 .px-10p {
   padding-left: 10%;
@@ -1075,13 +1062,13 @@ p {
   padding-top: 10%;
   padding-bottom: 10%;
 }
-.py-5p {
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.py-5p {
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 .pb-0 {
   padding-bottom: 0px;
