--- a/style.css
+++ b/style.css
@@ -268,4 +268,96 @@
         color: #EDD587;
     }
 
+    /* Mobile Menu */
+    .mobile-button {
+        position: fixed;
+        top: 3.2vh;
+        right: 2vh;
+        z-index: 9;
+        padding: 0.5rem;
+    }
+
+    .mobile-button span {
+        width: 2rem;
+        border: 0.5px solid white;
+        background-color: white;
+        display: block;
+        border-radius: 22px;
+        transition: 2s;
+    }
+
+    .mobile-button.active span {
+        border-color: white;
+        background-color: white;
+    }
+
+    .mobile-top,
+    .mobile-bottom {
+        position: absolute;
+    }
+
+    .mobile-top {
+        top: -02px;
+    }
+
+    .mobile-bottom {
+        bottom: -02px;
+    }
+
+    .mobile-button.active .mobile-top {
+        position: absolute;
+        top: 8px;
+        transform: rotateZ(45deg);
+    }
+
+    .mobile-button.active .mobile-middle {
+        /*   transform: rotateZ(270deg); */
+        border-color: rgba(0, 0, 0, 0);
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    .mobile-button.active .mobile-bottom {
+        position: absolute;
+        bottom: 8px;
+        transform: rotateZ(-45deg);
+    }
+
+    .mobile-menu {
+        display: flex;
+        position: fixed;
+        top: 0vh;
+        left: 100vw;
+        right: -100vw;
+        bottom: 0vh;
+        background-color: black;
+        padding: 5%;
+        box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+        z-index: 8;
+        transition: 1s;
+        align-content: space-around;
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    .mobile-menu.active {
+        left: 0;
+        right: 0;
+    }
+
+    .mobile-menu a {
+        text-decoration: none;
+        font-size: 1.25rem;
+        font-weight: 300;
+        color: var(--featured);
+        display: block;
+        padding: 0.5rem 1rem;
+        text-align: center;
+        white-space: nowrap;
+        text-transform: uppercase;
+    }
+
+    .mobile-menu a:hover {
+        color: white;
+    }
+
 }
