--- a/style.css
+++ b/style.css
@@ -305,6 +305,7 @@
     }
 
     .mobile-button.active .mobile-top {
+        border-color: var(--featured);
         position: absolute;
         top: 8px;
         transform: rotateZ(45deg);
@@ -317,6 +318,7 @@
     }
 
     .mobile-button.active .mobile-bottom {
+        border-color: var(--featured);
         position: absolute;
         bottom: 8px;
         transform: rotateZ(-45deg);
