--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,5 +1,5 @@
 <!-- Small Devices & Smaller -->
-<section class="md:hidden p-5p pb-0">
+<section class="md:hidden pt-10p p-5p">
     <h2 class="text-md-serif text-feature text-center">{{page.map.heading}}</h2>
     <p class="text-center">{{page.map.description}}</p>
     <div class="grid grid-cols-5 mt-12">
