--- a/_includes/optin.html
+++ b/_includes/optin.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style p-5p md:p-10p text-center bg-overlay"
+<section class="bg-image-style py-10p px-5p md:p-10p text-center bg-overlay"
     style="background-image: url('{{page.cta.background.background_image}}'); background-position: {{page.cta.background.background_position}};">
     <h2 class="heading-lg-sans text-feature">{{page.cta.heading_html}}</h2>
     <h3 class="text-feature lowercase mb-4">{{page.cta.subtitle}}</h3>
