--- a/_includes/about-home.html
+++ b/_includes/about-home.html
@@ -1,4 +1,4 @@
-<section class="bg-image-style p-5p md:p-10p bg-overlay text-center" style="background-image: url('{{page.about-mana.background_image}}');">
+<section class="bg-image-style py-10p px-5p md:p-10p bg-overlay text-center" style="background-image: url('{{page.about-mana.background_image}}');">
     <h2  class="text-md-serif text-feature">{{page.about-mana.heading}}</h2>
     <div>
         <p>{{page.about-mana.description_html}}</p>
