--- a/_includes/cta-course.html
+++ b/_includes/cta-course.html
@@ -1,8 +1,8 @@
-<section class="p-10p bg-image-style bg-overlay"
+<section class="section-padding bg-image-style bg-overlay"
     style="background-image: url('{{page.cta.background-image.background_image}}'); background-position: {{page.cta.background-image.image_focus}};">
     <div class="text-center">
         <h2 class="text-lg-serif">{{page.cta.heading}}</h2>
-        <div class="px-10p">
+        <div class="md:px-10p">
             <p>{{page.cta.description_html}}</p>
         </div>
     </div>
