--- a/_includes/description-course.html
+++ b/_includes/description-course.html
@@ -1,7 +1,7 @@
 <section class="pt-10p p-5p md:p-10p">
     <div class="text-center mb-12">
         <h2 class="heading-lg-sans text-feature">{{page.course-description.heading}}</h2>
-        <p>{{page.course-description.description}}</p>
+        <p>{{page.course-description.description_html}}</p>
     </div>
     {% for item in page.course-description.module %}
     <div class="flex mb-12">
